--- a/assets/css/universal-styles.css
+++ b/assets/css/universal-styles.css
@@ -3,6 +3,7 @@
     box-sizing: border-box;
     outline: none;
     border: none;
+    /* border: 1px solid red; */
     margin: 0;
     padding: 0;
 }
@@ -47,26 +48,46 @@ b {
 }
 
 /* ============== Content Styles ============= */
-
 /* -------- Navigation Menu -------- */
 nav {
-    position: fixed;
+    background-color: black;
     display: flex;
-    flex-direction: column;
-    align-items: flex-end;
+    align-items: center;
+    justify-content: space-between;
     width: 100%;
-    height: 5rem;
+    height: 4rem;
+}
+
+/* Logo */
+
+.nav-logo {
+    display: flex;
+    align-items: center;
+
+}
+
+.logo {
+
+    background-color: black;
+    border-radius: 100%;
+    width: 3.5rem;
+    height: 3.5rem;
+    margin: 0.5rem ;
+}
+
+.logo:hover {
+    transform: scale(0.95);
 }
 
 /* Hamburger Icon */
 #hamburger-icon, #close-icon {
-    z-index: 20;
+    z-index: 10;
     background-color: greenyellow;
     border-radius: 100%;
     width: 3rem;
     height: 3rem;
     padding: 0.5rem;
-    margin: 1rem;
+    margin: 0.5rem 1rem;
 }
 
 #hamburger-icon {
@@ -92,6 +113,7 @@ nav {
 #dropdown-nav {
     display: none;
     position: absolute;
+    top: 4rem;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -104,3 +126,17 @@ nav {
     font-size: 1.25rem;
     padding: 1rem;
 }
+
+
+
+
+/* -------- Footer ------- */
+footer {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    background-color: greenyellow;
+    height: 4.5rem;
+    width: 100%;
+}
+
