--- a/assets/css/components/global/fonts.css
+++ b/assets/css/components/global/fonts.css
@@ -9,13 +9,20 @@ h1 {
 
 h2 {
     font-family: 'Montserrat', Impact, 'Arial Narrow Bold', sans-serif;
+    font-size: 1.5rem;
+    text-align: center;
     color: greenyellow;
+}
+
+h4 {
+    font-size: 1.1rem;
+    text-align: justify;
 }
 
 
 /* ------ Paragraphs ----- */
 p {
-
+    text-align: justify;
 }
 
 
@@ -37,3 +44,37 @@ a:active, li:active {
 }
 
 
+/* ========= Media Queries ========= */
+
+/* ------- Tablet ------- */
+@media only screen and (min-width: 768px) {
+
+    /* Headers */
+    h2 {
+        font-size: 2.25rem;
+    }
+
+    h4 {
+        font-size: 1.125rem;
+        text-align: center;
+    }
+
+}
+
+/* ------- Laptop ------- */
+@media only screen and (min-width: 1024px) {
+
+    /* Headers */
+    h2 {
+        font-size: 2.25rem;
+    }
+
+    h4 {
+        font-size: 1.5rem;
+    }
+
+    p {
+        font-size: 1.1rem;
+    }
+
+}
