--- a/assets/css/components/global/header.css
+++ b/assets/css/components/global/header.css
@@ -1,8 +1,7 @@
 /* ========= Header Styles ========= */
 
 header {
-    background-image: url("/assets/images/banners/green-snake.jpg");
-    background-position: -2rem;
+    background-position: center;
     background-size: cover;
     width: 100%;
     height: 20rem;
