--- a/assets/css/components/global/footer.css
+++ b/assets/css/components/global/footer.css
@@ -1,45 +1,23 @@
 /* ================= Footer ================== */
 footer {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: greenyellow;
-    color: black;
-    width: 100%;
-    height: 4.5rem;
+  background-color: rgb(35, 35, 35);
+  color: white;
+  width: 100%;
 }
 
-footer strong {
-    color: black;
-    padding: 0.5rem;
-}
-
-#footer-logo {
-    margin-bottom: -0.25rem;
+footer p {
+  text-align: center;
 }
 
 /* ========= Media Queries ========= */
-
 /* ------- Tablet ------- */
 @media only screen and (min-width: 768px) {
-    footer {
-        height: 3rem;
-    }
-
-    /* Logo */
-    #footer-logo {
-        width: 2rem;
-    }
 }
 
 /* ------- Laptop ------- */
 @media only screen and (min-width: 1024px) {
-    footer {
-        height: 3rem;
-    }
+}
 
-    /* Logo */
-    #footer-logo {
-        width: 2.5rem;
-    }
+/* ------- Desktop ------- */
+@media only screen and (min-width: 1440px) {
 }
