--- a/assets/css/components/global/universal.css
+++ b/assets/css/components/global/universal.css
@@ -1,21 +1,58 @@
 /* ============= Universal Styles ============ */
+
+/* ========== HTML Styles ========== */
 * {
-    box-sizing: border-box;
-    outline: none;
-    border: none;
-    /* border: 1px solid red; */
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  outline: none;
+  border: none;
+  border: 1px solid red;
+  margin: 0;
+  padding: 0;
 }
 
 html {
-    scroll-behavior: smooth;
-    font-family: 'Roboto', 'Segoe UI', Arial, Helvetica, sans-serif;
-    font-size: 16px;   
+  scroll-behavior: smooth;
+  font-family: "Roboto", "Segoe UI", Arial, Helvetica, sans-serif;
+  font-size: 16px;
 }
 
+/* ========== Body Styles ========== */
 body {
-    background: rgb(50, 50, 50);
-    color: white;
-    width: 100%;
+  background: #0f0f0f;
+  color: white;
+  width: 100%;
+}
+
+/* ========= Content Styles ======== */
+
+/* Logo */
+.logo {
+  width: 3.5rem;
+}
+
+/* ------- Sections ------ */
+section {
+  width: 100%;
+  height: 20rem;
+}
+
+/* ========= Media Queries ========= */
+/* ------- Tablet -------- */
+@media only screen and (min-width: 768px) {
+  /* Section */
+  section {
+    padding: 1.5rem 2.5rem;
+  }
+}
+
+/* ------- Laptop -------- */
+@media only screen and (min-width: 1024px) {
+  /* Section */
+  section {
+    padding: 1.5rem 2.5rem;
+  }
+}
+
+/* ------- Desktop ------- */
+@media only screen and (min-width: 1440px) {
 }
