--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -3,54 +3,35 @@
 
 /* -------- Header ------- */
 header {
-    background-image: url("/assets/images/banners/green-snake.jpg");
-    background-position: -2rem;
-    box-shadow: inset 0px 0px 40px 40px black;
+  background-image: url("/assets/images/banners/green-snake.jpg");
+  background-position: -2rem;
+  box-shadow: inset 0px 0px 40px 40px black;
 }
-
 
 /* --------- Main -------- */
 main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-}
-
-
-/* ------- Sections ------ */
-section {    
-    width: 100%;
-    height: 20rem;
-    padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
 }
 
 /* Welcome */
 #welcome {
-    background-color: black;
-    height: auto;
+  height: auto;
 }
-
-#motto-banner {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-image: url("/assets/images/banners/black-monstera-leaves-background-wallpaper.jpg");
-    background-size: cover;
-    width: 100%;
-    height: 10rem;
-}
-
 
 /* ========= Media Queries ========= */
 
-/* ------- Tablet ------- */
+/* ------- Tablet -------- */
 @media only screen and (min-width: 768px) {
+}
 
-    /* Section */
-    section {
-        padding: 2rem;
-    }
+/* ------- Laptop -------- */
+@media only screen and (min-width: 1024px) {
+}
 
+/* ------- Desktop ------- */
+@media only screen and (min-width: 1440px) {
 }
