--- a/assets/css/components/global/universal.css
+++ b/assets/css/components/global/universal.css
@@ -5,7 +5,7 @@
   box-sizing: border-box;
   outline: none;
   border: none;
-  border: 1px solid red;
+  /* border: 1px solid red;gogit */
   margin: 0;
   padding: 0;
 }
