added grid styles and refactors

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,37 +1,22 @@
-/* ========== Index Styles ========= */
+/* =============== Index Styles ============== */
+/* -------- Global ------- */
 @import "./global.css";
 
 /* -------- Header ------- */
-header {
-  background-image: url("/assets/images/banners/green-snake.jpg");
-  background-position: -2rem;
-  box-shadow: inset 0px 0px 40px 40px black;
-}
+@import "./components/sections/header.css";
 
-/* --------- Main -------- */
-main {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-}
-
+/* ------- Sections ------ */
 /* Welcome */
-#welcome {
-  height: auto;
-}
+@import "./components/sections/welcome.css";
 
-/* ========= Media Queries ========= */
+/* Adoption */
+@import "./components/sections/adoption.css";
 
-/* ------- Tablet -------- */
-@media only screen and (min-width: 768px) {
-}
+/* Residents */
+@import "./components/sections/residents.css";
 
-/* ------- Laptop -------- */
-@media only screen and (min-width: 1024px) {
-}
+/* About Us */
+@import "./components/sections/about.css";
 
-/* ------- Desktop ------- */
-@media only screen and (min-width: 1440px) {
-}
+/* Contact Us */
+@import "./components/sections/contact.css";
