--- a/assets/css/components/global/navbar.css
+++ b/assets/css/components/global/navbar.css
@@ -1,23 +1,22 @@
-/* -------- Navigation Menu -------- */
-nav {
+/* ============== Navbar Styles ============== */
+/* --------- Navigation Bar -------- */
+#navbar {
   position: fixed;
   top: 0;
   background-color: black;
-  display: flex;
-  align-items: center;
   justify-content: space-between;
   width: 100%;
   height: 4rem;
   transition: top 0.2s;
 }
 
-/* Logo */
+/* --------- Logo -------- */
 .nav-logo {
   display: flex;
   align-items: center;
 }
 
-/* Hamburger Icon */
+/* ---- Hamburger Icon --- */
 #hamburger-icon,
 #close-icon {
   z-index: 10;
@@ -29,10 +28,12 @@ nav {
   margin: 0.5rem 1rem;
 }
 
+/* Show Hamburger */
 #hamburger-icon {
   display: block;
 }
 
+/* Hide Close */
 #close-icon {
   display: none;
 }
@@ -50,7 +51,7 @@ nav {
   transform: scale(1);
 }
 
-/* Dropdown Menu */
+/* ---- Dropdown Menu ---- */
 #dropdown-nav {
   display: none;
   flex-direction: column;
