--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,20 +1,21 @@
-/* ========= Global Styles ========= */
+/* ============== Global Styles ============== */
 
-/* --- Universal Style --- */
-@import "./components/global/universal.css";
+/* -------- Universal Style -------- */
+/* Body */
+@import "./components/global/body.css";
 
 /* Fonts */
 @import "./components/global/fonts.css";
 
+/* Images */
+@import "./components/global/images.css";
 
-/* ----- Top Of Page ----- */
+/* ----------- Components ---------- */
+/* Grids */
+@import "./components/global/grids.css";
+
 /* Navigation Menu */
 @import "./components/global/navbar.css";
 
-/* Header */
-@import "./components/global/header.css";
-
-
-/* ---- Bottom Of Page ---- */
 /* Footer */
 @import "./components/global/footer.css";
