--- a/assets/css/components/global/fonts.css
+++ b/assets/css/components/global/fonts.css
@@ -17,10 +17,11 @@ h2 {
 }
 
 h3 {
-  font-family: "Montserrat", Verdana, "Arial Narrow Bold", sans-serif;
+  font-family: "Oswald", Verdana, "Arial Narrow Bold", sans-serif;
+  text-transform: uppercase;
   font-size: 2.5rem;
-  font-weight: 100;
-  letter-spacing: 0.25rem;
+  font-weight: 500;
+  letter-spacing: 0.125rem;
   text-align: center;
   margin: 1rem;
 }
@@ -28,6 +29,12 @@ h3 {
 /* ------ Paragraphs ----- */
 p {
   text-align: justify;
+  margin: 1rem;
+}
+
+/* Small */
+small {
+  text-align: center;
   margin: 1rem;
 }
 
@@ -57,6 +64,11 @@ li:active {
   transform: scale(0.95);
 }
 
+/* Unordered Lists */
+ul {
+  list-style: none;
+}
+
 /* ========= Media Queries ========= */
 /* ------- Tablet ------- */
 @media only screen and (min-width: 768px) {
@@ -68,6 +80,9 @@ li:active {
 
 /* ------- Laptop ------- */
 @media only screen and (min-width: 1024px) {
+  h3 {
+    font-size: 4rem;
+  }
 }
 
 /* ------- Desktop ------- */
