--- a/assets/css/components/global/images.css
+++ b/assets/css/components/global/images.css
@@ -6,10 +6,14 @@
 
 /* ------------ Banners ------------ */
 .banner {
+  width: 100%;
+}
+
+/* Background Images */
+.background-img {
   background-size: cover;
   background-position: center;
-  background-repeat: none;
-  width: 100%;
+  background-repeat: no-repeat;
 }
 
 /* ========= Media Queries ========= */
