--- a/assets/css/components/sections/adoption.css
+++ b/assets/css/components/sections/adoption.css
@@ -1,1 +1,14 @@
 /* ============= Adoption Styles ============= */
+
+/* ========= Media Queries ========= */
+/* ------- Tablet -------- */
+@media only screen and (min-width: 768px) {
+}
+
+/* ------- Laptop -------- */
+@media only screen and (min-width: 1024px) {
+}
+
+/* ------- Desktop ------- */
+@media only screen and (min-width: 1440px) {
+}
