--- a/assets/css/components/sections/contact.css
+++ b/assets/css/components/sections/contact.css
@@ -1,8 +1,64 @@
 /* ============== Contact Styles ============= */
 
-/* ------ Follow Us ------ */
+/* ----------- Follow Us ----------- */
 #follow-cont {
   background-image: url("/assets/images/banners/follow-leaves.jpg");
+  box-shadow: inset 0 0 6rem 6rem rgb(0, 0, 0, 0.5);
+  justify-content: center;
   width: 100%;
-  height: 10rem;
+  padding: 2rem;
+}
+
+#follow-cont p {
+  margin: 0 2rem;
+  text-align: center;
+}
+
+/* ----- Social Media ---- */
+#social-media {
+  height: 3rem;
+  margin: 1rem;
+}
+
+/* Icons */
+.social-icon {
+  margin: 0 0.25rem;
+  width: 3rem;
+}
+
+.social-link {
+  width: 100%;
+  height: 100%;
+}
+
+/* Logos */
+#facebook {
+  background-image: url("/assets/images/icons/social-media/facebook.svg");
+}
+
+#instagram {
+  background-image: url("/assets/images/icons/social-media/instagram.svg");
+  background-color: white;
+  border-radius: 100%;
+}
+
+#tiktok {
+  background-image: url("/assets/images/icons/social-media/tiktok.svg");
+}
+
+#linkedin {
+  background-image: url("/assets/images/icons/social-media/linkedin.svg");
+}
+
+/* ========= Media Queries ========= */
+/* ------- Tablet -------- */
+@media only screen and (min-width: 768px) {
+}
+
+/* ------- Laptop -------- */
+@media only screen and (min-width: 1024px) {
+}
+
+/* ------- Desktop ------- */
+@media only screen and (min-width: 1440px) {
 }
