--- a/assets/css/components/global/images.css
+++ b/assets/css/components/global/images.css
@@ -1,7 +1,7 @@
 /* =============== Image Styles ============== */
 /* ------------- Logos ------------- */
 .logo {
-  width: 3.5rem;
+  height: 3.5rem;
 }
 
 /* ------------ Banners ------------ */
