--- a/assets/css/components/global/navbar.css
+++ b/assets/css/components/global/navbar.css
@@ -1,6 +1,7 @@
 /* ============== Navbar Styles ============== */
 /* --------- Navigation Bar -------- */
 #navbar {
+  z-index: 10;
   position: fixed;
   top: 0;
   background-color: black;
@@ -11,10 +12,11 @@
 }
 
 /* --------- Logo -------- */
-.nav-logo {
+.nav-logo-cont {
   display: flex;
   align-items: center;
   max-width: 14rem;
+  margin-left: 0.25rem;
 }
 
 /* ---- Hamburger Icon --- */
@@ -61,7 +63,6 @@
   position: absolute;
   top: 3.9rem;
   background-color: black;
-  list-style: none;
   width: 100%;
 }
 
@@ -102,4 +103,8 @@
 
 /* ------- Desktop ------- */
 @media only screen and (min-width: 1440px) {
+}
+
+/* ----- 4k Ultra HD ----- */
+@media only screen and (min-width: 2560px) {
 }
