--- a/assets/css/components/global/body.css
+++ b/assets/css/components/global/body.css
@@ -35,3 +35,7 @@ body {
 /* ------- Desktop ------- */
 @media only screen and (min-width: 1440px) {
 }
+
+/* ----- 4k Ultra HD ----- */
+@media only screen and (min-width: 2560px) {
+}
