--- a/assets/css/components/global/images.css
+++ b/assets/css/components/global/images.css
@@ -28,3 +28,7 @@
 /* ------- Desktop ------- */
 @media only screen and (min-width: 1440px) {
 }
+
+/* ----- 4k Ultra HD ----- */
+@media only screen and (min-width: 2560px) {
+}
