--- a/assets/css/components/sections/residents.css
+++ b/assets/css/components/sections/residents.css
@@ -12,3 +12,7 @@
 /* ------- Desktop ------- */
 @media only screen and (min-width: 1440px) {
 }
+
+/* ----- 4k Ultra HD ----- */
+@media only screen and (min-width: 2560px) {
+}
