Changed footer color to dark grey

--- a/assets/css/components/global/footer.css
+++ b/assets/css/components/global/footer.css
@@ -1,6 +1,6 @@
 /* ================= Footer ================== */
 footer {
-  background-color: black;
+  background-color: #202020;
   color: white;
   width: 100%;
 }
