--- a/assets/css/index/contact.css
+++ b/assets/css/index/contact.css
@@ -1,4 +1,4 @@
-/* ============== Welcome Styles ============= */
+/* ============== Contact Styles ============= */
 
 /* ========= Media Queries ========= */
 /* ------- Tablet -------- */
