--- a/assets/css/global/universal/fonts.css
+++ b/assets/css/global/universal/fonts.css
@@ -1,4 +1,4 @@
-/* ========== Font Styles ========== */
+/* =============== Font Styles =============== */
 /* ------- Headers ------- */
 
 h1,
@@ -61,13 +61,19 @@ small {
 }
 
 /* ---- Bold / Strong ---- */
-
 b {
   text-align: center;
 }
 
 strong {
   color: greenyellow;
+}
+
+/* ------- Buttons ------- */
+button {
+  font-family: "Montserrat", Impact, "Arial Narrow Bold", sans-serif;
+  font-size: 1rem;
+  font-weight: bold;
 }
 
 /* =========== Hyperlinks ========== */
@@ -100,9 +106,12 @@ ul {
 /* ------- Tablet ------- */
 @media only screen and (min-width: 768px) {
   /* Headers */
+  h1 {
+    margin-left: 0.5rem;
+  }
+
   h2 {
     font-size: 4.5rem;
-    margin: 2rem;
   }
 
   h3 {
@@ -127,7 +136,6 @@ ul {
   /* Headers */
   h2 {
     font-size: 7rem;
-    margin: 3rem;
   }
 }
 
@@ -136,6 +144,5 @@ ul {
   /* Headers */
   h2 {
     font-size: 12rem;
-    margin: 4rem;
   }
 }
