--- a/assets/css/index/follow.css
+++ b/assets/css/index/follow.css
@@ -1,12 +1,11 @@
-/* ============== Contact Styles ============= */
-
-/* ----------- Follow Us ----------- */
-#follow-cont {
+/* ============== Follow Styles ============== */
+#follow-sect {
   background-image: url("/assets/images/banners/follow-leaves.jpg");
   box-shadow: inset 0 0 6rem 6rem rgb(0, 0, 0, 0.5);
   justify-content: center;
   width: 100%;
   padding: 2rem;
+  border-bottom: none;
 }
 
 #follow-cont p {
@@ -62,4 +61,8 @@
 
 /* ------- Desktop ------- */
 @media only screen and (min-width: 1440px) {
+}
+
+/* ----- 4k Ultra HD ----- */
+@media only screen and (min-width: 2560px) {
 }
